Bug 1581774 - revert part of rev 5e2fad03c885 from bug 1507543 for Thunderbirds since it breaks the spellcheck. r=m_kato

--HG--
extra : rebase_source : 8dd6fdf15b48115691d21c476875a9bc5cd48591